src/objects/ssv4__Scheduler__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <description>Automatic action. For example run all tests every night for selected environment</description>
    <fields>
        <fullName>ssv4__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SecurityScan</fullName>
                </value>
                <value>
                    <fullName>runAllTests</fullName>
                </value>
                <value>
                    <fullName>unusedCode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__Hour__c</fullName>
        <label>Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__Minute__c</fullName>
        <label>Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__OrgSrc__c</fullName>
        <label>Org</label>
        <referenceTo>ssv4__OrgSrc__c</referenceTo>
        <relationshipLabel>Schedulers</relationshipLabel>
        <relationshipName>Schedulers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ssv4__addParam__c</fullName>
        <inlineHelpText>RunScaner : PortalAll OR PortalSecurity OR PortalQuality
runAllTest: [My Namespace],[All Namespaces] OR specify NameSpace</inlineHelpText>
        <label>Additional param</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__extId__c</fullName>
        <inlineHelpText>We are use this field in async actions</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__isOneRun__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Run this job only once</inlineHelpText>
        <label>One run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__sendResults__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send results of scheduler to Coordinator</inlineHelpText>
        <label>Send Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__weekDays__c</fullName>
        <label>Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scheduler</label>
    <listViews>
        <fullName>ssv4__All</fullName>
        <columns>NAME</columns>
        <columns>ssv4__Action__c</columns>
        <columns>ssv4__isActive__c</columns>
        <columns>ssv4__addParam__c</columns>
        <columns>ssv4__Hour__c</columns>
        <columns>ssv4__Minute__c</columns>
        <columns>ssv4__OrgSrc__c</columns>
        <columns>ssv4__weekDays__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCH-{000000}</displayFormat>
        <label>Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedulers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>